# tldr

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  PRD.md  README.md  docker-compose.yml  start.sh
backend/: .coverage  README.md  app.db  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: __init__.py  articles.py  sources.py  system.py
backend/app/core/: config.py
backend/app/db/: __init__.py  connection.py  session.py
backend/app/fetcher/: __init__.py  config.py  main.py  models.py  rss_fetcher.py  runner.py  sources.json
backend/app/models/: __init__.py  article.py  source.py
backend/tests/fetcher/: test_config.py  test_database.py  test_models.py  test_rss_fetcher.py  test_runner.py
database/: init.sql
docker/: Dockerfile.backend  Dockerfile.fetcher  Dockerfile.frontend  nginx.conf
fetcher/: .gitignore  README.md  requirements.txt
fetcher/app/: __init__.py  database.py  models.py
fetcher/tests/: __init__.py  test_config.py  test_database.py  test_models.py
frontend/: PROMPT.md  README.md  index.html  package-lock.json  package.json  tsconfig.node.json
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: ArticleModal.tsx  SourceModal.tsx
frontend/src/pages/: ArticlesPage.tsx  SourcesPage.tsx
